add eureka config

--- a/products-service.yml
+++ b/products-service.yml
@@ -1,5 +1,5 @@
 #server:  port: 9004
-  #Configurations H2
+#Configurations H2
 spring:
   jpa:
     show-sql: true
@@ -13,3 +13,10 @@ spring:
 #on peut le mettre aussi dans le module applicationn du microservice produit car ce module à une dependance du module implementation, c'est pour cela je l'ai mis à 48 (config-product.limite=4)
 config-product:
   limite: 2
+
+eureka:
+  client:
+    region: default
+  registryFetchIntervalSeconds: 5
+  serviceUrl:
+    defaultZone: http://localhost:6061/eureka/
