--- a/products-service.yml
+++ b/products-service.yml
@@ -3,17 +3,58 @@
 spring:
   jpa:
     show-sql: true
+    hibernate.ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        current_session_context_class: thread
+        format_sql: true
+        jdbc.lob.non_contextual_creation: true
+
   h2:
     console:
       enabled: true
   #défini l'encodage pour data.sql
   datasource:
     sql-script-encoding: UTF-8
+    url: jdbc:mysql://localhost:3306/microservicedb
+    username: papmalle
+    password: bamako
 
 #on peut le mettre aussi dans le module applicationn du microservice produit car ce module à une dependance du module implementation, c'est pour cela je l'ai mis à 48 (config-product.limite=4)
 config-product:
   limite: 5
 
+
 eureka.client.region: default
 eureka.client.registryFetchIntervalSeconds: 5
 eureka.client.serviceUrl.defaultZone: http://localhost:6061/eureka/
+
+
+
+
+#
+#
+## DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#
+## JDBC URL of the database.
+#spring.datasource.url: jdbc:mysql://localhost:3306/microservicedb
+## Login username of the database.
+#spring.datasource.username: root
+## Login password of the database.
+#spring.datasource.password: password
+#
+## JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
+#
+## DDL mode. This is actually a shortcut for the "hibernate.hbm2ddl.auto" property. Defaults to "create-drop" when using an embedded database and no schema manager was detected. Otherwise, defaults to "none".
+##spring.jpa.hibernate.ddl-auto: update
+## Whether to enable logging of SQL statements.
+##spring.jpa.show-sql: true
+#
+## Hibernate additional native properties to set on the JPA provider.
+#spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.current_session_context_class: thread
+#spring.jpa.properties.hibernate.format_sql: true
+#
+## Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation: true
